# bracket-lib

./: .gitignore  Cargo.toml  README.md  build.rs  webglbuild.bat
bracket-algorithm-traits/: Cargo.toml  README.md
bracket-algorithm-traits/src/: algorithm2d.rs  algorithm3d.rs  basemap.rs  lib.rs
bracket-bevy/: Cargo.toml
bracket-bevy/examples/: a_star_mouse.rs  alpha.rs  batch_z_order.rs  benchmark.rs  benchmark_scalable.rs  bevy_a_star_mouse.rs  bevy_alpha.rs  bevy_batch_z_order.rs  bevy_benchmark.rs  bevy_benchmark_scalable.rs  bevy_colorfont.rs  bevy_dwarfmap.rs  bevy_hello_minimal.rs  bevy_hello_terminal.rs  bevy_resize_terminal.rs  bevy_test.rs  bevy_textblock.rs  bevy_tiles.rs  bevy_two_layers_two_fonts.rs  bevy_walking.rs  colorfont.rs  dwarfmap.rs  hello_minimal.rs  hello_terminal.rs  resize_terminal.rs  test.rs  textblock.rs  tiles.rs  two_layers_two_fonts.rs  walking.rs
bracket-bevy/examples/bevy_roguelike_tutorial_4/: components.rs  main.rs  map.rs  player.rs
bracket-bevy/examples/roguelike_tutorial_4/: main.rs  player.rs  rect.rs
bracket-bevy/src/: context.rs  cp437.rs  lib.rs  textblock.rs
bracket-bevy/src/builder/: bterm_builder.rs  font_builder.rs  image_fixer.rs  loader_system.rs  mod.rs  terminal_layer.rs
bracket-bevy/src/consoles/: common_draw.rs  draw_batch.rs  mod.rs  point.rs  rect.rs  scaler.rs  simple_console.rs  text_spans.rs  update_system.rs  virtual_console.rs
bracket-bevy/src/consoles/simple_console/: back_end.rs  components.rs  front_end.rs  mod.rs  terminal_glyph.rs
bracket-bevy/src/consoles/sparse_console/: components.rs  front_end.rs  mod.rs
bracket-bevy/src/fonts/: font_store.rs  mod.rs
bracket-bevy/src/random_resource/: mod.rs
bracket-bevy/src/stageless_sets/: bracket_term_diagnostics.rs  bracket_term_update.rs  mod.rs
bracket-color/: Cargo.toml  README.md
bracket-color/examples/: colors.rs  lerp.rs  lerpit.rs  lerpit_hsv.rs  named_color.rs  shades_of_grey.rs
bracket-color/examples/util/: mod.rs
bracket-color/src/: color_pair.rs  hsv.rs  lerpit.rs  lib.rs  named.rs  palette.rs  rgb.rs  rgba.rs  xpcolor.rs
bracket-embedding/: Cargo.toml  README.md
bracket-embedding/src/: embedding.rs  lib.rs
bracket-geometry/: Cargo.toml  README.md
bracket-geometry/examples/: bresenham_circle.rs  bresenham_line.rs  bresenham_sweep.rs  distance.rs  vector_line.rs
bracket-geometry/src/: angle.rs  angles.rs  circle_bresenham.rs  distance.rs  lib.rs  line_bresenham.rs  line_vector.rs  lines.rs  point.rs  point3.rs  rect.rs  rectf.rs
bracket-lib/: Cargo.toml  LICENSE
bracket-lib/src/: lib.rs
bracket-noise/: Cargo.toml  README.md
bracket-noise/examples/: cellular.rs  perlin_fractal.rs  simplex_billow_quintic.rs  simplex_fractal.rs  simplex_rigid_hermite.rs  value.rs  value_fractal.rs  whitenoise.rs
bracket-noise/src/: fastnoise.rs  lib.rs
bracket-pathfinding/: Cargo.toml  README.md
bracket-pathfinding/benches/: astar_benchmark.rs  fov_benchmark.rs  jps_benchmark.rs
bracket-pathfinding/examples/astar/: common.rs  main.rs
bracket-pathfinding/examples/astar_manhattan/: common.rs
bracket-pathfinding/examples/dijkstra/: common.rs  main.rs
bracket-pathfinding/examples/dijkstra_weighted/: common.rs  main.rs
bracket-pathfinding/examples/fov/: common.rs  main.rs
bracket-pathfinding/examples/jps/: common.rs  main.rs
bracket-pathfinding/src/: astar.rs  dijkstra.rs  fieldofview.rs  jps.rs  lib.rs
bracket-pathfinding/src/field_of_view/: mod.rs  recursive_shadowcasting.rs  symmetric_shadowcasting.rs
bracket-random/: Cargo.toml  README.md
bracket-random/benches/: dice.rs
bracket-random/examples/: diceroll.rs  dicestring.rs  die_iterator.rs  distribution.rs  next.rs  rand.rs  range.rs  slice.rs  slice_index.rs
bracket-random/src/: iterators.rs  lib.rs  parsing.rs  random.rs
bracket-random/src/js_seed/: error.rs  mod.rs
bracket-rex/: Cargo.toml  README.md
bracket-rex/src/: lib.rs  rex.rs  xpcolor.rs
bracket-terminal/: Cargo.toml  README.md  webglbuild.bat
bracket-terminal/benches/: batching_benchmark.rs
bracket-terminal/examples/: alpha.rs  astar_mouse.rs  batch_z_order.rs  bench_scalable.rs  benchmark.rs  colorfont.rs  dwarfmap.rs  fancy.rs  flexible.rs  fontswitch.rs  hello_minimal.rs  hello_terminal.rs  input_harness.rs  keyboard.rs  native_gl.rs  no_cls.rs  postprocess.rs  return_error.rs  rex.rs  sparse.rs  sparse_cls.rs  sprites.rs  squishy.rs  textblock.rs  textsprites.rs  tiles.rs  twelve_by_twelve.rs  unicode.rs  virtual_console.rs  walking.rs  walking_with_is_pressed.rs
bracket-terminal/resources/: nyan.xp
bracket-terminal/src/: bterm.rs  codepage437.rs  command_buffer.rs  console.rs  embedding.rs  format_string.rs  gamestate.rs  gui_helpers.rs  initializer.rs  lib.rs  multi_tile_sprite.rs  rex.rs  simple_console.rs  sparse_console.rs  textblock.rs  virtual_console.rs
bracket-terminal/src/consoles/: command_buffer.rs  console.rs  fancy_console.rs  flexible_console.rs  mod.rs  simple_console.rs  sparse_console.rs  sprite_console.rs  virtual_console.rs
bracket-terminal/src/consoles/sprites/: mod.rs  sprite.rs  spritesheet.rs
bracket-terminal/src/consoles/text/: format_string.rs  gui_helpers.rs  mod.rs  multi_tile_sprite.rs  textblock.rs
bracket-terminal/src/hal/: framebuffer.rs  mod.rs  scaler.rs
bracket-terminal/src/hal/amethyst_be/: dummy.rs  font.rs  init.rs  input_helpers.rs  mainloop.rs  mod.rs
bracket-terminal/src/hal/crossterm_be/: font.rs  init.rs  main_loop.rs  mod.rs  scancode_helper.rs  shader.rs  (+1 more)
bracket-terminal/src/input/: event_queue.rs  input_handler.rs  mod.rs
bracket-terminal/wasm_help/: index.html
config/: display.ron
rltk/: Cargo.toml  README.md
rltk/examples/: ex01-helloworld.rs  ex02-sparse.rs  ex04-fov.rs  ex05-dijkstra.rs  ex06-astar-mouse.rs  ex07-tiles.rs  ex08-rex.rs  ex09-offsets.rs  ex10-postprocess.rs  ex11-random.rs  ex12-simplex.rs  ex13-textblock.rs  ex14-dwarfmap.rs  ex15-keyboard.rs  ex16-wasm-external.rs  ex17-textsprites.rs
rltk/examples-deprecated/: ex03-walking.rs  ex12-simplex.rs  ex16-wasm-external.rs
rltk/src/: lib.rs
(+315 files in other folders)
