[package]
name = "bracket-lib"
version = "0.8.1"
authors = ["Herbert Wolverson <herberticus@gmail.com>"]
edition = "2018"
publish = true
description = "Meta-crate holding the entirety of bracket-lib (and exposing it). Use this for the full roguelike toolkit experience."
homepage = "https://github.com/thebracket/bracket-lib"
repository = "https://github.com/thebracket/bracket-lib"
readme = "README.md"
keywords = ["roguelike", "gamedev", "terminal", "ascii", "cp437"]
categories = ["game-engines"]
license = "MIT"
exclude = [
    "bracket-algorithm-traits",
    "bracket-color",
    "bracket-geometry",
    "bracket-noise",
    "bracket-pathfinding",
    "bracket-random",
    "bracket-terminal",
    "rltk",
    "screenshots"
]

[features]
default = [ "opengl" ]
specs = [ "bracket-geometry/specs" ]
serde = [ "bracket-color/serde", "bracket-geometry/serde", "bracket-random/serde" ]
threaded = [ "bracket-pathfinding/threaded" ]
opengl = [ "bracket-terminal/opengl" ]
curses = [ "bracket-terminal/curses" ]
crossterm = [ "bracket-terminal/crossterm" ]
amethyst_engine_vulkan = [ "bracket-terminal/amethyst_engine_vulkan" ]
amethyst_engine_metal = [ "bracket-terminal/amethyst_engine_metal" ]

[dependencies]
bracket-algorithm-traits = { version = "~0.8.1" }
bracket-color = { version = "~0.8.1", features = [ "rex", "palette" ] }
bracket-geometry = { version = "~0.8.1" }
bracket-noise = { version = "~0.8.1" }
bracket-pathfinding = { version = "~0.8.1" }
bracket-random = { version = "~0.8.0", features = [ "parsing" ] }
bracket-terminal = { version = "~0.8.1", default-features = false }

[workspace]
members = [
    "bracket-algorithm-traits",
    "bracket-color",
    "bracket-geometry",
    "bracket-noise",
    "bracket-pathfinding",
    "bracket-random",
    "bracket-terminal",
    "rltk"
]
