[package]
name = "bracket-lib"
version = "0.8.7"
authors = ["Herbert Wolverson <herberticus@gmail.com>"]
edition = "2021"
publish = true
description = "Meta-crate holding the entirety of bracket-lib (and exposing it). Use this for the full roguelike toolkit experience."
homepage = "https://github.com/thebracket/bracket-lib"
repository = "https://github.com/thebracket/bracket-lib"
readme = "README.md"
keywords = ["roguelike", "gamedev", "terminal", "ascii", "cp437"]
categories = ["game-engines"]
license = "MIT"
exclude = [
    "bracket-algorithm-traits",
    "bracket-color",
    "bracket-geometry",
    "bracket-noise",
    "bracket-pathfinding",
    "bracket-random",
    "bracket-terminal",
    "rltk",
    "screenshots"
]
resolver = "2" # Enables the new Cargo resolution engine
incremental = false # Causing issues with Windows builds

[features]
default = [ "opengl" ]
bevy = ["bracket-geometry/bevy"]
specs = [ "bracket-geometry/specs" ]
serde = [ "bracket-color/serde", "bracket-geometry/serde", "bracket-random/serde" ]
threaded = [ "bracket-pathfinding/threaded" ]
opengl = [ "bracket-terminal/opengl" ]
curses = [ "bracket-terminal/curses" ]
crossterm = [ "bracket-terminal/cross_term" ]
webgpu = [ "bracket-terminal/webgpu" ]

[dependencies]
bracket-algorithm-traits = { path = "./bracket-algorithm-traits", version = "~0.8" }
bracket-color = { path = "./bracket-color", version = "~0.8", features = [ "palette" ] }
bracket-geometry = { path = "./bracket-geometry", version = "~0.8" }
bracket-noise = { path = "./bracket-noise", version = "~0.8" }
bracket-pathfinding = { path = "./bracket-pathfinding", version = "~0.8" }
bracket-random = { path = "./bracket-random", version = "~0.8", features = [ "parsing" ] }
bracket-terminal = { path = "./bracket-terminal", version = "~0.8", default-features = false }

[workspace]
members = [
    "bracket-algorithm-traits",
    "bracket-color",
    "bracket-geometry",
    "bracket-noise",
    "bracket-pathfinding",
    "bracket-random",
    "bracket-terminal",
    "rltk",
    "bracket-rex",
    "bracket-embedding",
    "bracket-bevy",
]
