[package]
authors     = ["Herbert Wolverson <herberticus@gmail.com>"]
categories  = ["game-engines", "graphics"]
description = "ASCII/CP437 Psuedo-terminal for Bevy, based on bracket-lib. Aims to provide everything you need to produce a retro console experience using Bevy for the ECS and rendering."
edition     = "2021"
homepage    = "https://github.com/thebracket/bracket-lib"
keywords    = ["roguelike", "gamedev", "RGB", "HSV", "color"]
license     = "MIT"
name        = "bracket-bevy"
publish     = true
readme      = "README.md"
repository  = "https://github.com/thebracket/bracket-lib"
version     = "0.9.0"

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", default-features = false, features = [
  "bevy_asset",
  "bevy_winit",
  "render",
  "png",
  "x11",
] }
bracket-color = { path = "../bracket-color", features = ["bevy"] }
bracket-geometry = { path = "../bracket-geometry", version = "~0.8", features = ["bevy"] }
bracket-random = { path = "../bracket-random" }
lazy_static = "1.4"
parking_lot = "0.12"

[dev-dependencies]
bracket-noise       = { path = "../bracket-noise", version = "~0.8" }
bracket-pathfinding = { path = "../bracket-pathfinding", version = "~0.8" }
