[package]
name = "bracket-color"
version = "0.8.7"
authors = ["Herbert Wolverson <herberticus@gmail.com>"]
edition = "2021"
publish = true
description = "RGB and HSV color handling and utilities, including lerp and W3C named colors. Part of the bracket-lib family."
homepage = "https://github.com/thebracket/bracket-lib"
repository = "https://github.com/thebracket/bracket-lib"
readme = "README.md"
keywords = ["roguelike", "gamedev", "RGB", "HSV", "color"]
categories = ["game-engines", "graphics"]
license = "MIT"

[features]
palette = [ "lazy_static", "parking_lot" ]

[dependencies]
serde = { version = "~1.0.110", features = ["derive"], optional = true }
crossterm = { version = "~0.25", optional = true }
lazy_static = { version = "1.4.0", optional = true }
parking_lot = { version = "~0.12", optional = true }
bevy = { version = "~0.15", optional = true }

[dev-dependencies]
crossterm = "~0.25"

[[example]]
name = "colors"
required-features = ["crossterm"]

[[example]]
name = "lerp"
required-features = ["crossterm"]

[[example]]
name = "lerpit"
required-features = ["crossterm"]

[[example]]
name = "lerpit_hsv"
required-features = ["crossterm"]

[[example]]
name = "named_color"
required-features = ["crossterm"]

[[example]]
name = "shades_of_grey"
required-features = ["crossterm"]
