[package]
name = "bracket-geometry"
version = "0.8.3"
authors = ["Herbert Wolverson <herberticus@gmail.com>"]
edition = "2018"
publish = true
description = "Geometry utilities. Rect, lines, circles, distance calculations. Part of the bracket-lib family."
homepage = "https://github.com/thebracket/bracket-lib"
repository = "https://github.com/thebracket/bracket-lib"
readme = "README.md"
keywords = ["geometry", "gamedev", "bresenham", "circle", "distance"]
categories = ["game-engines", "graphics"]
license = "MIT"

[dependencies]
ultraviolet = "~0.8.1"
serde = { version = "~1.0.110", features = ["derive"], optional = true }
specs = { version = "0.16.1", optional = true }

[dev-dependencies]
crossterm = "~0.19"
