[package]
name = "bracket-geometry"
version = "0.8.7"
authors = ["Herbert Wolverson <herberticus@gmail.com>"]
edition = "2021"
publish = true
description = "Geometry utilities. Rect, lines, circles, distance calculations. Part of the bracket-lib family."
homepage = "https://github.com/thebracket/bracket-lib"
repository = "https://github.com/thebracket/bracket-lib"
readme = "README.md"
keywords = ["geometry", "gamedev", "bresenham", "circle", "distance"]
categories = ["game-engines", "graphics"]
license = "MIT"

[dependencies]
serde = { version = "~1.0.139", features = ["derive"], optional = true }
specs = { version = "~0.18.0", optional = true }
bevy = { version = "~0.15", optional = true }
ultraviolet = "~0.9.0"

[dev-dependencies]
crossterm = "~0.25"
