[package]
name = "bracket-lib"
version = "0.1.0"
authors = ["Herbert Wolverson <herberticus@gmail.com>"]
edition = "2018"
publish = false
description = "Meta-crate holding the entirety of bracket-lib (and exposing it)."
homepage = "https://github.com/thebracket/bracket-lib"
repository = "https://github.com/thebracket/bracket-lib"
readme = "README.md"
keywords = ["roguelike", "gamedev", "terminal", "console", "ascii", "cp437"]
categories = ["game-engines"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bracket-algorithm-traits = "0.1.0"
bracket-color = "0.1.0"
bracket-geometry = "0.1.0"
bracket-pathfinding = "0.1.0"
bracket-random = "0.1.0"
bracket-terminal = "0.1.0"
bracket-noise = "0.1.0"
