[package]
name = "bracket-noise"
version = "0.8.1"
authors = ["Herbert Wolverson <herberticus@gmail.com>"]
edition = "2018"
publish = true
description = "Rust port of Auburn's amazing FastNoise library. Part of the bracket-lib family."
homepage = "https://github.com/thebracket/bracket-lib"
repository = "https://github.com/thebracket/bracket-lib"
readme = "README.md"
keywords = ["roguelike", "gamedev", "noise", "perlin", "simplex"]
categories = ["game-engines", "random"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bracket-random = "~0.8.0"

[dev-dependencies]
crossterm = "~0.17.4"
bracket-color = { version = "~0.8.1", features = [ "rex", "palette" ] }
