[package]
name = "bracket-pathfinding"
version = "0.7.0"
authors = ["Herbert Wolverson <herberticus@gmail.com>"]
edition = "2018"
publish = true
description = "Pathfinding and field-of view utilities. A Star, Dijkstra. Part of the bracket-lib family."
homepage = "https://github.com/thebracket/rltk_rs"
repository = "https://github.com/thebracket/rltk_rs"
readme = "README.md"
keywords = ["gamedev", "pathfinding", "astar", "dijkstra", "field-of-view"]
categories = ["game-engines", "graphics"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
threaded = ["rayon"]

[dependencies]
bracket-geometry = { path = "../bracket-geometry" }
bracket-algorithm-traits = { path = "../bracket-algorithm-traits" }
rayon = { version = "1.3.0", optional = true }

[dev-dependencies]
crossterm = "0.16.0"
bracket-random = {path = "../bracket-random" }
bracket-color = { path = "../bracket-color" }
criterion = "0.3.1"

[[bench]]
name = "fov_benchmark"
harness = false
