[package]
name = "bracket-pathfinding"
version = "0.8.1"
authors = ["Herbert Wolverson <herberticus@gmail.com>"]
edition = "2018"
publish = true
description = "Pathfinding and field-of view utilities. A Star, Dijkstra. Part of the bracket-lib family."
homepage = "https://github.com/thebracket/bracket-lib"
repository = "https://github.com/thebracket/bracket-lib"
readme = "README.md"
keywords = ["gamedev", "pathfinding", "astar", "dijkstra", "field-of-view"]
categories = ["game-engines", "graphics"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
threaded = ["rayon"]

[dependencies]
bracket-geometry = "~0.8.1"
bracket-algorithm-traits = "~0.8.1"
rayon = { version = "1.3.0", optional = true }
smallvec = "~1.4.0"

[dev-dependencies]
crossterm = "~0.17.4"
bracket-random = "0.8.0"
bracket-color = { version = "~0.8.1", features = [ "rex", "palette" ] }
criterion = "0.3.1"

[[bench]]
name = "fov_benchmark"
harness = false

[[bench]]
name = "astar_benchmark"
harness = false
