[package]
name = "bracket-pathfinding"
version = "0.8.7"
authors = ["Herbert Wolverson <herberticus@gmail.com>"]
edition = "2021"
publish = true
description = "Pathfinding and field-of view utilities. A Star, Dijkstra. Part of the bracket-lib family."
homepage = "https://github.com/thebracket/bracket-lib"
repository = "https://github.com/thebracket/bracket-lib"
readme = "README.md"
keywords = ["gamedev", "pathfinding", "astar", "dijkstra", "field-of-view"]
categories = ["game-engines", "graphics"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
threaded = ["rayon"]

[dependencies]
bracket-geometry = { path = "../bracket-geometry", version = "~0.8" }
bracket-algorithm-traits = { path = "../bracket-algorithm-traits", version = "~0.8" }
num-rational = { version = "0.4", default-features = false, features = ["std"] }
rayon = { version = "1.5.0", optional = true }
smallvec = "~1"
hashbrown = "0.13.2"

[dev-dependencies]
crossterm = "~0.25"
bracket-random = { path = "../bracket-random", version = "0.8" }
bracket-color = { path = "../bracket-color", version = "~0.8", features = [ "palette" ] }
criterion = "~0.4"

[[bench]]
name = "fov_benchmark"
harness = false

[[bench]]
name = "astar_benchmark"
harness = false
