[package]
name = "bracket-rex"
version = "0.8.0"
edition = "2018"
publish = false
description = "Load/save REX Paint files and utilize them in bracket-terminal projects."
homepage = "https://github.com/thebracket/bracket-lib"
repository = "https://github.com/thebracket/bracket-lib"
readme = "README.md"
keywords = ["roguelike", "gamedev", "terminal", "ascii", "cp437"]
categories = ["game-engines"]
license = "MIT"

[dependencies]
byteorder = "1.4.2"
flate2 = "1.0.20"
bracket-color = { path = "../bracket-color", version = "~0.8.2", features = [ "palette" ] }
bracket-embedding = { path = "../bracket-embedding", version = "~0.8" }