[package]
name = "bracket-terminal"
version = "0.8.0"
authors = ["Herbert Wolverson <herberticus@gmail.com>"]
edition = "2018"
publish = true
description = "ASCII/Codepage 437 terminal emulator with a game loop. Defaults to OpenGL, also support Amethyst, Curses and Crossterm for output. Part of the bracket-lib family."
homepage = "https://github.com/thebracket/bracket-lib"
repository = "https://github.com/thebracket/bracket-lib"
readme = "README.md"
keywords = ["roguelike", "gamedev", "terminal", "ascii", "cp437"]
categories = ["game-engines"]
license = "MIT"
exclude = [
    "wasm_help"
]

[dependencies]
bracket-color = { path = "../bracket-color", features = [ "rex", "palette" ] }
bracket-geometry = { path = "../bracket-geometry" }
flate2 = "1.0.14"
lazy_static = "1.4.0"
object-pool = "0.4"
byteorder = "1.3.4"
glow = { version = "0.4.0", optional = true }
image = { version = "0.23.3", default-features = false, features = ["jpeg", "png"], optional = true }
crossterm = { version = "0.17.2", optional = true }
pancurses = { version = "0.16.1", optional = true }
amethyst = { version = "0.15.0", features = [ "tiles" ], optional = true }
ultraviolet = "0.4.5"
parking_lot = { version = "0.10.0" }

[target.'cfg(not(any(target_arch = "wasm32")))'.dependencies]
glutin = {version = "0.24.0", optional = true }
winit = { version = "0.22.0" }

[features]
default = [ "opengl" ]
opengl = [ "glow", "image", "glutin" ]
curses = [ "pancurses" ]
amethyst_engine_vulkan = [ "amethyst/vulkan", "image" ]
amethyst_engine_metal = [ "amethyst/metal", "image" ]

[dev-dependencies]
bracket-random = { path = "../bracket-random" }
bracket-pathfinding = { path = "../bracket-pathfinding" }
bracket-noise = { path = "../bracket-noise" }
criterion = "0.3.1"

[target.wasm32-unknown-unknown.dependencies]
web-sys = { version = "0.3", features=["console", "Attr", "CanvasRenderingContext2d", "Document", "Element", "Event",
    "EventTarget", "HtmlCanvasElement", "HtmlElement", "HtmlInputElement", "Node", "Text", "Window", "KeyboardEvent",
    "MouseEvent"] }
wasm-bindgen = "0.2"
wasm-timer = "0.1.0"
rand = { version = "0.7.3", features = ["wasm-bindgen"] }
console_error_panic_hook = "0.1.6"
winit = { version = "0.22.0", features = [ "web-sys" ] }

[[bench]]
name = "batching_benchmark"
harness = false

[[example]]
name = "native_gl"
path = "examples/native_gl.rs"
required-features = [ "opengl" ]

[[example]]
name = "bench_scalable"
path = "examples/bench_scalable.rs"
required-features = [ "opengl" ]

[[example]]
name = "fontswitch"
path = "examples/fontswitch.rs"
required-features = [ "opengl" ]

[[example]]
name = "squishy"
path = "examples/squishy.rs"
required-features = [ "opengl" ]

[[example]]
name = "flexible"
path = "examples/flexible.rs"
required-features = [ "opengl" ]