[package]
name = "bracket-terminal"
version = "0.8.7"
authors = ["Herbert Wolverson <herberticus@gmail.com>"]
edition = "2021"
publish = true
description = "ASCII/Codepage 437 terminal emulator with a game loop. Defaults to OpenGL, also support WebGPU (for Vulkan/Metal/WGPU), Curses and Crossterm for output. Part of the bracket-lib family."
homepage = "https://github.com/thebracket/bracket-lib"
repository = "https://github.com/thebracket/bracket-lib"
readme = "README.md"
keywords = ["roguelike", "gamedev", "terminal", "ascii", "cp437"]
categories = ["game-engines"]
license = "MIT"
exclude = [
    "wasm_help"
]

[dependencies]
bracket-color = { path = "../bracket-color", version = "~0.8", features = [ "palette" ] }
bracket-geometry = { path = "../bracket-geometry", version = "~0.8" }
bracket-rex = { path = "../bracket-rex", version = "~0.8" }
bracket-embedding = { path = "../bracket-embedding", version = "~0.8" }
lazy_static = "1.4.0"
object-pool = "0.5.3"
glow = { version = "~0.11", optional = true }
image = { version = "0.24", default-features = false, features = ["jpeg", "png"], optional = true }
png = { version = "0.17", optional = true }
crossterm = { version = "~0.25", optional = true }
pancurses = { version = "0.17", optional = true }
ultraviolet = "~0.9"
parking_lot = { version = "~0.12" }
ctrlc = { version = "~3.2", optional=true }
anyhow = "~1.0"
wgpu = { version = "0.15.0", optional=true }
pollster = { version = "0.2", optional=true }
bytemuck = {version = "1.4.0", optional=true }

[target.'cfg(not(any(target_arch = "wasm32")))'.dependencies]
glutin = {version = "~0.29", optional = true }
winit = { version = "~0.27" }
spin_sleep = { version = "1.0.0", optional = true }

[features]
default = [ "opengl" ]
low_cpu = [ "spin_sleep" ]
opengl = [ "glow", "image", "glutin" ]
curses = [ "pancurses", "ctrlc" ]
cross_term = [ "crossterm", "ctrlc" ]
webgpu = [ "wgpu", "pollster", "image", "bytemuck", "png" ]

[dev-dependencies]
bracket-random = { path = "../bracket-random", version = "~0.8" }
bracket-pathfinding = { path = "../bracket-pathfinding", version = "~0.8" }
bracket-noise = { path = "../bracket-noise", version = "~0.8" }
criterion = "~0.4"

[target.wasm32-unknown-unknown.dependencies]
web-sys = { version = "0.3", features=["console", "Attr", "CanvasRenderingContext2d", "Document", "Element", "Event",
    "EventTarget", "HtmlCanvasElement", "HtmlElement", "HtmlInputElement", "Node", "Text", "Window", "KeyboardEvent",
    "MouseEvent"] }
wasm-bindgen = "0.2"
wasm-timer = "0.1.0"
rand = { version = "0.8", default-features = false }
console_error_panic_hook = "0.1.6"
winit = { version = "0.26" }

[[bench]]
name = "batching_benchmark"
harness = false

[[example]]
name = "native_gl"
path = "examples/native_gl.rs"
required-features = [ "opengl" ]

[[example]]
name = "bench_scalable"
path = "examples/bench_scalable.rs"

[[example]]
name = "fontswitch"
path = "examples/fontswitch.rs"

[[example]]
name = "squishy"
path = "examples/squishy.rs"

[[example]]
name = "flexible"
path = "examples/flexible.rs"

[[example]]
name = "sprites"
path = "examples/sprites.rs"
