[package]
name = "rltk"
version = "0.7.0"
authors = ["Herbert Wolverson <herberticus@gmail.com>"]
edition = "2018"
publish = true
description = "A CP437/ASCII terminal library and helpers to make creating roguelike games in Rust easy. Similar to libtcod, but aiming to be Rust-native."
homepage = "https://github.com/thebracket/rltk_rs"
repository = "https://github.com/thebracket/rltk_rs"
readme = "README.md"
keywords = ["roguelike", "cp437", "ascii", "virtual-terminal", "gamedev"]
categories = ["game-engines", "graphics"]
license = "MIT"

[features]
default = [ "opengl" ]
specs = [ "bracket-lib/specs" ]
serde = [ "bracket-lib/serde" ]
threaded = [ "bracket-lib/threaded" ]
opengl = [ "bracket-lib/opengl" ]
curses = [ "bracket-lib/curses" ]
crossterm = [ "bracket-lib/crossterm" ]
amethyst_engine_vulkan = [ "bracket-lib/amethyst_engine_vulkan" ]
amethyst_engine_metal = [ "bracket-lib/amethyst_engine_metal" ]

[dependencies]
bracket-lib = { path = "../", default-features = false }

[dev-dependencies]

[[example]]
name = "1"
path = "examples/ex01-helloworld.rs"

[[example]]
name = "2"
path = "examples/ex02-sparse.rs"

[[example]]
name = "3"
path = "examples/ex03-walking.rs"

[[example]]
name = "4"
path = "examples/ex04-fov.rs"

[[example]]
name = "5"
path = "examples/ex05-dijkstra.rs"

[[example]]
name = "6"
path = "examples/ex06-astar-mouse.rs"

[[example]]
name = "7"
path = "examples/ex07-tiles.rs"

[[example]]
name = "8"
path = "examples/ex08-rex.rs"

[[example]]
name = "9"
path = "examples/ex09-offsets.rs"

[[example]]
name = "10"
path = "examples/ex10-postprocess.rs"

[[example]]
name = "11"
path = "examples/ex11-random.rs"

[[example]]
name = "12"
path = "examples/ex12-simplex.rs"

[[example]]
name = "13"
path = "examples/ex13-textblock.rs"

[[example]]
name = "14"
path = "examples/ex14-dwarfmap.rs"

[[example]]
name = "15"
path = "examples/ex15-keyboard.rs"

[[example]]
name = "16"
path = "examples/ex16-wasm-external.rs"

[[example]]
name = "17"
path = "examples/ex17-textsprites.rs"
